Move hardcoded values into config

--- a/turnstile_protect.libraries.yml
+++ b/turnstile_protect.libraries.yml
@@ -2,3 +2,14 @@ challenge:
   version: 1.x
   js:
     js/challenge.js: {}
+chosen:
+  version: 1.8.7
+  css:
+    theme:
+      https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css: {}
+  js:
+    https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js: {}
+    js/chosen.js: {}
+  dependencies:
+    - core/jquery
+    - core/once
