--- a/turnstile_protect.routing.yml
+++ b/turnstile_protect.routing.yml
@@ -5,3 +5,10 @@ turnstile_protect.challenge:
     _form: '\Drupal\turnstile_protect\Form\Challenge'
   requirements:
     _permission: 'access content'
+turnstile_protect.settings:
+  path: '/admin/config/people/captcha/turnstile-protect'
+  defaults:
+    _form: '\Drupal\turnstile_protect\Form\Settings'
+    _title: 'Turnstile Protect'
+  requirements:
+    _permission: 'administer turnstile'
