--- a/turnstile_protect.info.yml
+++ b/turnstile_protect.info.yml
@@ -6,3 +6,4 @@ core_version_requirement: ^10 || ^11
 dependencies:
   - captcha:captcha
   - turnstile:turnstile
+configure: turnstile_protect.settings
