--- a/turnstile_protect.services.yml
+++ b/turnstile_protect.services.yml
@@ -1,6 +1,6 @@
 services:
   turnstile_protect.challenge:
     class: Drupal\turnstile_protect\EventSubscriber\Challenge
-    arguments: ['@current_user']
+    arguments: ['@config.factory', '@current_user']
     tags:
       - { name: event_subscriber }
