move default bot value into config

--- a/config/install/turnstile_protect.settings.yml
+++ b/config/install/turnstile_protect.settings.yml
@@ -1,3 +1,18 @@
 routes: []
-bots: []
+bots: [
+  "duckduckgo.com",
+  "kagibot.org",
+  "googleusercontent.com",
+  "google.com",
+  "googlebot.com",
+  "msn.com",
+  "openalex.org",
+  "archive.org",
+  "linkedin.com",
+  "facebook.com",
+  "instagram.com",
+  "twitter.com",
+  "x.com",
+  "apple.com"
+]
 protect_parameters: false
